Update color gradient and description

--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
   box-sizing: border-box;
 }
 :root {
-  --gradient: linear-gradient(
-    45deg,
-    #7e7cff,
-    #ffda67
-  );
-  --card: #272524;
+  --gradient: linear-gradient(45deg, #d3d3d3, #ffffff);
+  --card: #2e2e2e;
   --transition-time: 0.5s;
 }
 body {
   background: var(--gradient);
-  color: #fdfcfd;
+  color: #f0f0f0;
   font-family: "Montserrat", sans-serif;
   display: flex;
   justify-content: center;
@@ -47,7 +43,7 @@ body {
   width: 250px;
   height: 250px;
   margin-right: 30px;
-  margin-left: -50px; /* Fa sporgere l'immagine verso sinistra */
+  margin-left: -50px;
   flex-shrink: 0;
   border-radius: 20px;
   overflow: hidden;
@@ -101,7 +97,7 @@ body {
   transform: scale(1.1);
 }
 .socials i {
-  color: white;
+  color: #2e2e2e;
   font-size: 18px;
 }
 h2 {
@@ -111,7 +107,7 @@ h2 {
 }
 h3 {
   margin-top: 0;
-  color: #ffda67;
+  color: #cfcfcf;
   font-weight: 400;
   margin-bottom: 15px;
   transition: all var(--transition-time) ease;
@@ -189,7 +185,7 @@ p {
      <h2>Lorenzo Recchia</h2>
      <h3>Student</h3>
      <p>
-        I am a 4th-year high school student in Italy finishing my studies, and I enjoy creating animations in Python with Manim.
+       I am a senior high school student based in Italy, currently completing my final year of studies. I have a strong interest in programming and enjoy creating visual content using Python, particularly through the Manim animation library.
      </p>
      <div class="socials">
        <a href="https://linkedin.com/in/lorenzo-recchia-55241a359" target="_blank">
