--- a/index.html
+++ b/index.html
@@ -1,205 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profile Card</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
-<style>
-* {
-  box-sizing: border-box;
-}
-:root {
-  --gradient: linear-gradient(45deg, #d3d3d3, #ffffff);
-  --card: #2e2e2e;
-  --transition-time: 0.5s;
-}
-body {
-  background: var(--gradient);
-  color: #f0f0f0;
-  font-family: "Montserrat", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-}
-.card {
-  display: flex;
-  align-items: center;
-  width: 75vw;
-  max-width: 750px;
-  padding: 30px;
-  background: var(--card);
-  border-radius: 24px;
-  flex-direction: row;
-  overflow: visible;
-  position: relative;
-  transition: all var(--transition-time) ease;
-}
-.card-image-container {
-  position: relative;
-  width: 250px;
-  height: 250px;
-  margin-right: 30px;
-  margin-left: -50px;
-  flex-shrink: 0;
-  border-radius: 20px;
-  overflow: hidden;
-  background: var(--gradient);
-  transition: all var(--transition-time) ease;
-}
-.card-image-container::after {
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
-  border-radius: inherit;
-  background: var(--gradient);
-  z-index: -1;
-  opacity: 0;
-  transition: all var(--transition-time) ease;
-}
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-  transition: all var(--transition-time) ease;
-}
-.card-content {
-  z-index: 1;
-  transition: all var(--transition-time) ease;
-  padding-left: 20px;
-}
-.socials {
-  display: flex;
-  gap: 10px;
-  margin-top: 15px;
-}
-.socials a {
-  background: var(--gradient);
-  border: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  text-decoration: none;
-}
-.socials a:hover {
-  transform: scale(1.1);
-}
-.socials i {
-  color: #2e2e2e;
-  font-size: 18px;
-}
-h2 {
-  margin-bottom: 5px;
-  font-size: 32px;
-  transition: all var(--transition-time) ease;
-}
-h3 {
-  margin-top: 0;
-  color: #cfcfcf;
-  font-weight: 400;
-  margin-bottom: 15px;
-  transition: all var(--transition-time) ease;
-}
-p {
-  line-height: 1.6;
-  max-width: 90%;
-  transition: all var(--transition-time) ease;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile Card</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    :root {
+      --gradient: linear-gradient(135deg, #cfcfcf 0%, #999999 50%, #5a5a5a 100%);
+      --card: #2e2e2e;
+      --gold-light: #f5d879;
+      --button-gradient: linear-gradient(45deg, #dcdcdc, #f5d879);
+      --transition-time: 0.5s;
+    }
+    body {
+      background: var(--gradient);
+      background-attachment: fixed;
+      background-size: cover;
+      font-family: "Montserrat", sans-serif;
+      color: #fdfcfd;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+    .card {
+      display: flex;
+      align-items: center;
+      width: 75vw;
+      max-width: 750px;
+      padding: 30px;
+      background: var(--card);
+      border-radius: 24px;
+      flex-direction: row;
+      overflow: visible;
+      position: relative;
+      transition: all var(--transition-time) ease;
+    }
+    .card-image-container {
+      position: relative;
+      width: 250px;
+      height: 250px;
+      margin-right: 30px;
+      margin-left: -50px;
+      flex-shrink: 0;
+      border-radius: 20px;
+      overflow: hidden;
+      background: var(--gradient);
+      transition: all var(--transition-time) ease;
+    }
+    .card img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      transition: all var(--transition-time) ease;
+    }
+    .card-content {
+      z-index: 1;
+      transition: all var(--transition-time) ease;
+      padding-left: 20px;
+    }
+    .socials {
+      display: flex;
+      gap: 10px;
+      margin-top: 15px;
+    }
+    .socials a {
+      background: var(--button-gradient);
+      border: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      text-decoration: none;
+    }
+    .socials a:hover {
+      transform: scale(1.1);
+    }
+    .socials i {
+      color: white;
+      font-size: 18px;
+    }
+    h2 {
+      margin-bottom: 5px;
+      font-size: 32px;
+      transition: all var(--transition-time) ease;
+    }
+    h3 {
+      margin-top: 0;
+      color: var(--gold-light);
+      font-weight: 400;
+      margin-bottom: 15px;
+      transition: all var(--transition-time) ease;
+    }
+    p {
+      line-height: 1.6;
+      max-width: 90%;
+      color: white;
+      transition: all var(--transition-time) ease;
+    }
 
-@media (max-width: 768px) {
-  .card {
-    flex-direction: column;
-    text-align: center;
-    padding: 30px 20px;
-    width: 90vw;
-    padding-top: 100px;
-  }
-  .card-image-container {
-    position: absolute;
-    top: -80px;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 0;
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    border: 5px solid var(--card);
-  }
-  .card-image-container::after {
-    border-radius: 50%;
-    opacity: 1;
-  }
-  .card-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding-left: 0;
-  }
-  .card h2 {
-    font-size: 26px;
-    margin-top: 0;
-  }
-  .card p {
-    max-width: 100%;
-  }
-}
+    @media (max-width: 768px) {
+      .card {
+        flex-direction: column;
+        text-align: center;
+        padding: 30px 20px;
+        width: 90vw;
+        padding-top: 100px;
+      }
+      .card-image-container {
+        position: absolute;
+        top: -80px;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 0;
+        width: 160px;
+        height: 160px;
+        border-radius: 50%;
+        border: 5px solid var(--card);
+      }
+      .card-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding-left: 0;
+      }
+      .card h2 {
+        font-size: 26px;
+        margin-top: 0;
+      }
+      .card p {
+        max-width: 100%;
+      }
+    }
 
-@media (max-width: 480px) {
-  .card-image-container {
-    width: 130px;
-    height: 130px;
-    top: -65px;
-  }
-  .card {
-    padding-top: 80px;
-  }
-  .socials a {
-    width: 35px;
-    height: 35px;
-  }
-  .socials i {
-    font-size: 16px;
-  }
-}
-</style>
+    @media (max-width: 480px) {
+      .card-image-container {
+        width: 130px;
+        height: 130px;
+        top: -65px;
+      }
+      .card {
+        padding-top: 80px;
+      }
+      .socials a {
+        width: 35px;
+        height: 35px;
+      }
+      .socials i {
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
 <body>
- <div class="card">
-   <div class="card-image-container">
-     <img src="pfp.jpg" alt="Profile Image" />
-   </div>
-   <div class="card-content">
-     <h2>Lorenzo Recchia</h2>
-     <h3>Student</h3>
-     <p>
-       I am a senior high school student based in Italy, currently completing my final year of studies. I have a strong interest in programming and enjoy creating visual content using Python, particularly through the Manim animation library.
-     </p>
-     <div class="socials">
-       <a href="https://linkedin.com/in/lorenzo-recchia-55241a359" target="_blank">
-         <i class="fa-brands fa-linkedin"></i>
-       </a>
-       <a href="https://github.com/St0rmosu" target="_blank">
-         <i class="fa-brands fa-github"></i>
-       </a>
-       <a href="https://instagram.com/st0rmosu" target="_blank">
-         <i class="fa-brands fa-instagram"></i>
-       </a>
-     </div>
-   </div>
- </div>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <div class="card">
+    <div class="card-image-container">
+      <img src="pfp.jpg" alt="Profile Image" />
+    </div>
+    <div class="card-content">
+      <h2>Lorenzo Recchia</h2>
+      <h3>Student</h3>
+      <p>
+        I am a final-year high school student in Italy with a strong interest in programming and computer graphics. I particularly enjoy creating mathematical animations using the Python library Manim.
+      </p>
+      <div class="socials">
+        <a href="https://linkedin.com/in/lorenzo-recchia-55241a359" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/St0rmosu" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://instagram.com/st0rmosu" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 </body>
 </html>
