--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     .card {
       display: flex;
       align-items: center;
-      width: 75vw;
-      max-width: 750px;
+      width: 80vw;
+      max-width: 950px;
       padding: 30px;
       background: var(--card);
       border-radius: 24px;
@@ -44,10 +44,10 @@
     }
     .card-image-container {
       position: relative;
-      width: 250px;
-      height: 250px;
-      margin-right: 30px;
-      margin-left: -50px;
+      width: 400px;
+      height: 400px;
+      margin-right: 40px;
+      margin-left: -80px;
       flex-shrink: 0;
       border-radius: 20px;
       overflow: hidden;
@@ -88,7 +88,7 @@
       transform: scale(1.1);
     }
     .socials i {
-      color: white;
+      color: black;
       font-size: 18px;
     }
     h2 {
@@ -116,16 +116,16 @@
         text-align: center;
         padding: 30px 20px;
         width: 90vw;
-        padding-top: 100px;
+        padding-top: 150px;
       }
       .card-image-container {
         position: absolute;
-        top: -80px;
+        top: -130px;
         left: 50%;
         transform: translateX(-50%);
         margin: 0;
-        width: 160px;
-        height: 160px;
+        width: 260px;
+        height: 260px;
         border-radius: 50%;
         border: 5px solid var(--card);
       }
@@ -147,12 +147,12 @@
 
     @media (max-width: 480px) {
       .card-image-container {
-        width: 130px;
-        height: 130px;
-        top: -65px;
+        width: 200px;
+        height: 200px;
+        top: -100px;
       }
       .card {
-        padding-top: 80px;
+        padding-top: 120px;
       }
       .socials a {
         width: 35px;
@@ -167,7 +167,7 @@
 <body>
   <div class="card">
     <div class="card-image-container">
-      <img src="pfp.jpg" alt="Profile Image" />
+      <img src="/api/placeholder/400/400" alt="Profile Image" />
     </div>
     <div class="card-content">
       <h2>Lorenzo Recchia</h2>
