Changed social buttons to black colour

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     * {
       box-sizing: border-box;
     }
+    
+    a {
+      color: black;
+    }
 
     :root {
       --gradient: linear-gradient(135deg, #cfcfcf 0%, #999999 50%, #5a5a5a 100%);
