Supporting other languages

--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
   <title>Profile Card</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-    
-    a {
-      color: black;
-    }
+    * { box-sizing: border-box; }
+    a { color: black; }
 
     :root {
       --gradient: linear-gradient(135deg, #cfcfcf 0%, #999999 50%, #5a5a5a 100%);
@@ -34,6 +29,7 @@
       min-height: 100vh;
       margin: 0;
       padding: 0;
+      flex-direction: column;
     }
 
     .card {
@@ -97,9 +93,7 @@
       text-decoration: none;
     }
 
-    .socials a:hover {
-      transform: scale(1.3);
-    }
+    .socials a:hover { transform: scale(1.3); }
 
     .socials i {
       color: black;
@@ -107,9 +101,7 @@
       transition: color 0.3s ease;
     }
 
-    .socials a:hover i {
-      color: black !important;
-    }
+    .socials a:hover i { color: black !important; }
 
     h2 {
       margin-bottom: 5px;
@@ -161,14 +153,8 @@
         padding-left: 0;
       }
 
-      .card h2 {
-        font-size: 26px;
-        margin-top: 0;
-      }
-
-      .card p {
-        max-width: 100%;
-      }
+      .card h2 { font-size: 26px; margin-top: 0; }
+      .card p { max-width: 100%; }
     }
 
     @media (max-width: 480px) {
@@ -178,18 +164,14 @@
         top: -65px;
       }
 
-      .card {
-        padding-top: 80px;
-      }
+      .card { padding-top: 80px; }
 
       .socials a {
         width: 35px;
         height: 35px;
       }
 
-      .socials i {
-        font-size: 16px;
-      }
+      .socials i { font-size: 16px; }
     }
   </style>
 </head>
@@ -200,9 +182,9 @@
     </div>
     <div class="card-content">
       <h2>Lorenzo Recchia</h2>
-      <h3>Student</h3>
-      <p>
-        I am a final-year high school student in Italy with a strong interest in programming and computer graphics. I particularly enjoy creating mathematical animations using the Python library Manim.
+      <h3 id="role">Student</h3>
+      <p id="description">
+        I am a 4th-year high school student with a strong interest in making animations in Python using the Manim library.
       </p>
       <div class="socials">
         <a href="https://linkedin.com/in/lorenzo-recchia-55241a359" target="_blank">
@@ -217,6 +199,27 @@
       </div>
     </div>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <script>
+    const lang = (navigator.language || navigator.userLanguage).toLowerCase();
+
+    const roleEl = document.getElementById("role");
+    const descEl = document.getElementById("description");
+
+    if (lang.startsWith("it")) {
+      roleEl.innerText = "Studente";
+      descEl.innerText = "Sono uno studente del 4 superiore che ha un forte interesse nel fare animazione in python usando la libreria di manim.";
+    } else if (lang.startsWith("de")) {
+      roleEl.innerText = "Schüler";
+      descEl.innerText = "Ich bin ein Schüler im vierten Jahr der Oberschule mit großem Interesse an der Erstellung von Animationen in Python mit der Bibliothek Manim.";
+    } else if (lang.startsWith("fr")) {
+      roleEl.innerText = "Étudiant";
+      descEl.innerText = "Je suis un élève en terminale avec un grand intérêt pour la création d'animations en Python à l'aide de la bibliothèque Manim.";
+    } else {
+      roleEl.innerText = "Student";
+      descEl.innerText = "I am a 4th-year high school student with a strong interest in making animations in Python using the Manim library.";
+    }
+  </script>
 </body>
 </html>
