Added a phone number

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
         <a href="https://instagram.com/st0rmosu" target="_blank">
           <i class="fa-brands fa-instagram"></i>
         </a>
+        <a href="tel: +393713244193" target="_blank">
+          <i class="fa-brand fa-instagram"></i>
+        </a>
       </div>
     </div>
   </div>
