--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <i class="fa-brands fa-instagram"></i>
         </a>
         <a href="tel: +393713244193" target="_blank">
-          <i class="fa-brand fa-instagram"></i>
+          <i class="fa fa-whatsapp"></i>
         </a>
       </div>
     </div>
