Updated the descrption

--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
       <h2>Lorenzo Recchia</h2>
       <h3 id="role">Student</h3>
       <p id="description">
-        I am a 4th-year high school student with a strong interest in making animations in Python using the Manim library.
+        Hi I'm Lorenzo.
+      </p>
+      <p id ="description2">
+        I am a senior high school student based in Italy, currently attending a specialized program in Information Technology.
       </p>
       <div class="socials">
         <a href="https://linkedin.com/in/lorenzo-recchia-55241a359" target="_blank">
@@ -212,16 +215,16 @@
 
     if (lang.startsWith("it")) {
       roleEl.innerText = "Studente";
-      descEl.innerText = "Sono uno studente del 4 superiore che ha un forte interesse nel fare animazione in python usando la libreria di manim.";
+      descEl.innerText = "Ciao, sono Lorenzo.";
+      descEl.innerText = "Sono uno studente dell’ultimo anno delle scuole superiori in Italia, attualmente iscritto a un indirizzo specializzato in Informatica.";
     } else if (lang.startsWith("de")) {
       roleEl.innerText = "Schüler";
-      descEl.innerText = "Ich bin ein Schüler im vierten Jahr der Oberschule mit großem Interesse an der Erstellung von Animationen in Python mit der Bibliothek Manim.";
-    } else if (lang.startsWith("fr")) {
-      roleEl.innerText = "Étudiant";
-      descEl.innerText = "Je suis un élève en terminale avec un grand intérêt pour la création d'animations en Python à l'aide de la bibliothèque Manim.";
+      descEl.innerText = "Ich heiße Lorenzo.";
+      descel.innerText = "Ich bin ein Schüler im letzten Jahr der Oberstufe in Italien und besuche derzeit einen spezialisierten Bildungsgang im Bereich Informationstechnologie."
     } else {
       roleEl.innerText = "Student";
-      descEl.innerText = "I am a 4th-year high school student with a strong interest in making animations in Python using the Manim library.";
+      reoleEL.innerText = "Hi, I'm Lorenzo";
+      descEl.innerText = "I am a senior high school student based in Italy, currently attending a specialized program in Information Technology.";
     }
   </script>
 </body>
