--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     .card {
       display: flex;
       align-items: center;
-      width: 75vw;
-      max-width: 750px;
+      width: 90vw;
+      max-width: 1000px;
       padding: 30px;
       background: var(--card);
       border-radius: 24px;
@@ -50,7 +50,7 @@
       position: relative;
       width: 300px;
       height: 300px;
-      margin-right: 30px;
+      margin-right: 40px;
       margin-left: -50px;
       flex-shrink: 0;
       border-radius: 20px;
@@ -105,7 +105,7 @@
 
     h2 {
       margin-bottom: 5px;
-      font-size: 32px;
+      font-size: 36px;
       transition: all var(--transition-time) ease;
     }
 
@@ -114,7 +114,7 @@
       color: var(--gold-light);
       font-weight: 400;
       margin-bottom: 15px;
-      font-size: 18px;
+      font-size: 20px;
       transition: all var(--transition-time) ease;
     }
 
@@ -130,13 +130,13 @@
         flex-direction: column;
         text-align: center;
         padding: 30px 20px;
-        width: 90vw;
-        padding-top: 100px;
+        width: 95vw;
+        padding-top: 120px;
       }
 
       .card-image-container {
         position: absolute;
-        top: -80px;
+        top: -90px;
         left: 50%;
         transform: translateX(-50%);
         margin: 0;
@@ -154,18 +154,18 @@
         padding-left: 0;
       }
 
-      .card h2 { font-size: 26px; margin-top: 0; }
+      .card h2 { font-size: 28px; margin-top: 0; }
       .card p { max-width: 100%; }
     }
 
     @media (max-width: 480px) {
       .card-image-container {
-        width: 150px;
-        height: 150px;
-        top: -65px;
+        width: 140px;
+        height: 140px;
+        top: -70px;
       }
 
-      .card { padding-top: 80px; }
+      .card { padding-top: 90px; }
 
       .socials a {
         width: 35px;
@@ -179,7 +179,7 @@
 <body>
   <div class="card">
     <div class="card-image-container">
-      <img src="pfp.jpg" alt="Profile Image" />
+      <img src="pfp.jpg" alt="Profile Image" width="900" height="900" />
     </div>
     <div class="card-content">
       <h2>Lorenzo Recchia</h2>
