--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
         <div class="cv-dropdown-icon">
           <i class="fa-solid fa-file"></i>
           <div class="dropdown-content">
-            <a href="Curriclum Ita.pdf" download id="cv-icon-italian">
+            <a href="Lorenzo_Recchia_CV_IT.pdf" download id="cv-icon-italian">
               <i class="fa-solid fa-file-arrow-down"></i> Curriculum
             </a>
-            <a href="Curriculum.pdf" download id="cv-icon-english">
+            <a href="Lorenzo_Recchia_CV_EN.pdf" download id="cv-icon-english">
               <i class="fa-solid fa-file-arrow-down"></i> Curriculum
             </a>
           </div>
@@ -326,10 +326,10 @@
           <i class="fa-solid fa-file-arrow-down"></i><span id="cv-text">Download CV</span>
         </div>
         <div class="dropdown-content">
-          <a href="Curriculum Ita" download id="cv-italian">
+          <a href="Curriculum Ita.pdf" download id="cv-italian">
             <i class="fa-solid fa-file-arrow-down"></i> CV Italiano
           </a>
-          <a href="Curricculum Eng" download id="cv-english">
+          <a href="Curriculum Eng.pdf" download id="cv-english">
             <i class="fa-solid fa-file-arrow-down"></i> CV English
           </a>
         </div>
