--- a/index.html
+++ b/index.html
@@ -306,30 +306,16 @@
         <a href="tel:+393713244193" target="_blank">
           <i class="fa-brands fa-whatsapp"></i>
         </a>
-        <!-- CV icon with dropdown -->
-        <div class="cv-dropdown-icon">
-          <i class="fa-solid fa-file"></i>
-          <div class="dropdown-content">
-            <a href="Lorenzo_Recchia_CV_IT.pdf" download id="cv-icon-italian">
-              <i class="fa-solid fa-file-arrow-down"></i> Curriculum
-            </a>
-            <a href="Lorenzo_Recchia_CV_EN.pdf" download id="cv-icon-english">
-              <i class="fa-solid fa-file-arrow-down"></i> Curriculum
-            </a>
-          </div>
-        </div>
-      </div>
-      
       <!-- Pulsante CV con menu a tendina -->
       <div class="cv-dropdown" style="display: none;">
         <div class="cv-button">
           <i class="fa-solid fa-file-arrow-down"></i><span id="cv-text">Download CV</span>
         </div>
         <div class="dropdown-content">
-          <a href="Curriculum Ita.pdf" download id="cv-italian">
+          <a href="Curriculum_Ita.pdf" download id="cv-italian">
             <i class="fa-solid fa-file-arrow-down"></i> CV Italiano
           </a>
-          <a href="Curriculum Eng.pdf" download id="cv-english">
+          <a href="Curriculum_Eng.pdf" download id="cv-english">
             <i class="fa-solid fa-file-arrow-down"></i> CV English
           </a>
         </div>
@@ -354,24 +340,24 @@
       cvText.innerText = "Scarica CV";
       cvItalian.innerText = "CV Italiano";
       cvEnglish.innerText = "CV Inglese";
-      cvIconItalian.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> Curriculum';
-      cvIconEnglish.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> Curriculum';
+      cvIconItalian.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> CV ITA';
+      cvIconEnglish.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> CV ENG';
     } else if (lang.startsWith("de")) {
       roleEl.innerText = "Schüler | Putignano, Italien";
       descEl2.innerText = "Ich bin ein Schüler im letzten Jahr der Oberstufe in Italien und besuche derzeit einen spezialisierten Bildungsgang im Bereich Informationstechnologie.";
       cvText.innerText = "Lebenslauf";
       cvItalian.innerText = "Italienischer Lebenslauf";
       cvEnglish.innerText = "Englischer Lebenslauf";
-      cvIconItalian.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> Curriculum';
-      cvIconEnglish.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> Curriculum';
+      cvIconItalian.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> CV ITA';
+      cvIconEnglish.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> CV ENG';
     } else {
       roleEl.innerText = "Student | Putignano, Italy";
       descEl2.innerText = "I am a senior high school student based in Italy, currently attending a specialized program in Information Technology.";
       cvText.innerText = "Download CV";
       cvItalian.innerText = "Italian CV";
       cvEnglish.innerText = "English CV";
-      cvIconItalian.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> Curriculum';
-      cvIconEnglish.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> Curriculum';
+      cvIconItalian.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> CV ITA';
+      cvIconEnglish.innerHTML = '<i class="fa-solid fa-file-arrow-down"></i> CV ENG';
     }
   </script>
 </body>
