--- a/index.html
+++ b/index.html
@@ -252,6 +252,9 @@
         <a href="mailto:lorenzo.recchia@example.com" target="_blank" rel="noopener noreferrer" aria-label="Email">
           <i class="fa-solid fa-envelope"></i>
         </a>
+        <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Portfolio">
+          <i class="fa-brands fa-black-tie"></i>
+        </a>
         <!-- CV dropdown icon -->
         <div class="cv-dropdown-icon" id="cvDropdownIcon" tabindex="0" aria-haspopup="true" aria-expanded="false" role="button" aria-label="Open CV dropdown">
           <i class="fa-solid fa-file-pdf"></i>
@@ -263,6 +266,7 @@
               <i class="fa-solid fa-file-pdf"></i> CV EN
             </a>
           </div>
+        </div>
       </div>
     </div>
   </div>
@@ -328,14 +332,14 @@
     }
     });
 
-// Permetti chiusura con ESC da tastiera
-document.addEventListener("keydown", (e) => {
-  if(e.key === "Escape" && cvDropdown.classList.contains("show")) {
-    cvDropdown.classList.remove("show");
-    cvIcon.setAttribute("aria-expanded", "false");
-    cvIcon.focus();
-  }
-});
+    // Permetti chiusura con ESC da tastiera
+    document.addEventListener("keydown", (e) => {
+      if(e.key === "Escape" && cvDropdown.classList.contains("show")) {
+        cvDropdown.classList.remove("show");
+        cvIcon.setAttribute("aria-expanded", "false");
+        cvIcon.focus();
+      }
+    });
   </script>
 </body>
 </html>
