--- a/index.html
+++ b/index.html
@@ -243,21 +243,18 @@
       <h3 id="role"></h3>
       <p id="description2"></p>
       <div class="socials">
+        <a href="https://www.instagram.com/lorenzorecchia" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
         <a href="https://www.linkedin.com/in/lorenzorecchia" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
         <a href="https://github.com/lorenzorecchia" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
           <i class="fa-brands fa-github"></i>
         </a>
-        <a href="mailto:lorenzo.recchia@example.com" target="_blank" rel="noopener noreferrer" aria-label="Email">
-          <i class="fa-solid fa-envelope"></i>
-        </a>
-        <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Portfolio">
-          <i class="fa-brands fa-black-tie"></i>
-        </a>
         <!-- CV dropdown icon -->
         <div class="cv-dropdown-icon" id="cvDropdownIcon" tabindex="0" aria-haspopup="true" aria-expanded="false" role="button" aria-label="Open CV dropdown">
-          <i class="fa-solid fa-file-pdf"></i>
+          <i class="fa-brands fa-black-tie"></i>
           <div class="dropdown-content" id="cvDropdownContent" role="menu" aria-label="Download CV">
             <a href="Curriculum Ita.pdf" download="Lorenzo_Recchia_Curriculum_Ita.pdf" role="menuitem" aria-label="Download CV in Italian">
               <i class="fa-solid fa-file-pdf"></i> CV IT
