--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
         <div class="cv-dropdown-icon" id="cvDropdownIcon" tabindex="0" aria-haspopup="true" aria-expanded="false" role="button" aria-label="Open CV dropdown">
           <i class="fas fa-black-tie"></i>
           <div class="dropdown-content" id="cvDropdownContent" role="menu" aria-label="Download CV">
-            <a href="Curriculum Ita.pdf" download="Lorenzo_Recchia_Curriculum_Ita.pdf" role="menuitem" aria-label="Download CV in Italian">
+            <a href="Curriculum_Ita.pdf" download="Curriculum_Ita.pdf" role="menuitem" aria-label="Download CV in Italian">
               <i class="fas fa-file-pdf"></i> CV IT
             </a>
-            <a href="Curriculum Eng.pdf" download="Lorenzo_Recchia_Curriculum_Eng.pdf" role="menuitem" aria-label="Download CV in English">
+            <a href="Curriculum_Eng.pdf" download="Curriculum_Eng.pdf" role="menuitem" aria-label="Download CV in English">
               <i class="fas fa-file-pdf"></i> CV EN
             </a>
           </div>
