--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <i class="fab fa-github"></i>
         </a>
         <div class="cv-dropdown-icon" id="cvDropdownIcon" tabindex="0" aria-haspopup="true" aria-expanded="false" role="button" aria-label="Open CV dropdown">
-          <i class="fas fa-black-tie"></i>
+          <i class="fas fa-file-contract"></i> <!-- Icona aggiornata qui -->
           <div class="dropdown-content" id="cvDropdownContent" role="menu" aria-label="Download CV">
             <a href="Curriculum_Ita.pdf" download="Curriculum_Ita.pdf" role="menuitem" aria-label="Download CV in Italian">
               <i class="fas fa-file-pdf"></i> CV IT
