Fixed CV icon colors, Fixed social links

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 
       .socials i { font-size: 16px; }
     }
+
+    .invert {
+      filter: invert(1);
+    }
   </style>
 </head>
 <body>
@@ -240,23 +244,23 @@
       <h3 id="role"></h3>
       <p id="description2"></p>
       <div class="socials">
-        <a href="https://www.instagram.com/lorenzorecchia" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+        <a href="https://www.instagram.com/st0rmosu" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.linkedin.com/in/lorenzorecchia" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/lorenzo-recchia-55241a359/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://github.com/lorenzorecchia" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+        <a href="https://github.com/St0rmosu" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
           <i class="fab fa-github"></i>
         </a>
         <div class="cv-dropdown-icon" id="cvDropdownIcon" tabindex="0" aria-haspopup="true" aria-expanded="false" role="button" aria-label="Open CV dropdown">
           <i class="fas fa-file-contract"></i> <!-- Icona aggiornata qui -->
           <div class="dropdown-content" id="cvDropdownContent" role="menu" aria-label="Download CV">
             <a href="Curriculum_Ita.pdf" download="Curriculum_Ita.pdf" role="menuitem" aria-label="Download CV in Italian">
-              <i class="fas fa-file-pdf"></i> CV IT
+              <i class="fas fa-file-pdf invert"></i> CV IT
             </a>
             <a href="Curriculum_Eng.pdf" download="Curriculum_Eng.pdf" role="menuitem" aria-label="Download CV in English">
-              <i class="fas fa-file-pdf"></i> CV EN
+              <i class="fas fa-file-pdf invert"></i> CV EN
             </a>
           </div>
         </div>
