--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     // Dati dinamici per lingua e contenuto
     const dataIT = {
       ruolo: "Studente | Putignano, Italia",
-      descrizione: "Sono uno studente che sta finendo il suo percorso di studi alle superiori e sono appassionato al web developing"
+      descrizione: "Sono uno studente che sta finendo il suo percorso di studi alle superiori e sono appassionato nel mondo del web developing"
     };
     const dataEN = {
       ruolo: "Student | Putignano, Italy",
