--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <body>
   <div class="card">
     <div class="card-image-container">
-      <img src="pfp.jpg" alt="Profile Image" width="900" height="900" />
+      <img src="IMG_20250725_214730.jpg" alt="Profile Image" width="900" height="900" />
     </div>
     <div class="card-content">
       <h2>Lorenzo Recchia</h2>
